--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="container">
 <div class="row"> 
 <div class="bar-phone">
-<i class="fa fa-phone"></i> <span>Call Us :</span> <strong>+256753848865</strong>
+<i class="fa fa-phone"></i> <span>Call Us :</span> <strong>+256753848865 | +256783701878</strong>
 </div>
 <div class="bar-mail">
 <i class="fa fa-envelope"></i> <span>Mail Us :</span> <strong>info@agapecrc.org</strong>
