--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <i class="fa fa-phone"></i> <span>Call Us :</span> <strong>+256753848865 | +256783701878</strong>
 </div>
 <div class="bar-mail">
-<i class="fa fa-envelope"></i> <span>Mail Us :</span> <strong>info@agapecrc.org</strong>
+<i class="fa fa-envelope"></i> <span>Mail Us :</span> <strong>info@agapecrc.org | agapecrcltd@gmail.com</strong>
 </div>
 <div class="header-social">
 <a class="facebook" href="#" title="facebook" target="_blank" rel="nofollow"><i class="fa fa-facebook"></i>  </a>
